--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
     "editor.formatOnSave": true,
     "triggerTaskOnSave.tasks": {
         "Build": [
+            "assets/**/*",
             "src/**/*",
             "src/*",
             "build.sh"
