--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -10,7 +10,7 @@
                 "isDefault": true
             },
             "presentation": {
-                "clear": false
+                "clear": true
             }
         }
     ]
