Hot-Reloading Textures and Shaders

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,5 +7,9 @@
             "src/*",
             "build.sh"
         ],
+    },
+    "files.associations": {
+        "iostream": "cpp",
+        "random": "cpp"
     }
 }
