--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,12 +2,15 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "name": "Launch",
+            "name": "Debug Game",
             "type": "cppvsdbg",
             "request": "launch",
-            "program": "${workspaceFolder}/builds/game.exe",
+            "program": "${workspaceFolder}/build/builds/Debug/game.exe",
             "args": [],
             "cwd": "${workspaceFolder}",
+            "logging": {
+                "engineLogging": true
+            },
             "console": "integratedTerminal"
         }
     ]
